--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Annoys Parrot
-url: http://annoys-parrot.github.io
+title: Mario Pappagallo
+url: http://annoys-parrot.github.io/mario-pappagallo/
 baseurl:
 
 highlighter: rouge
