--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,5 @@ title: Mario Pappagallo
 url: http://annoys-parrot.github.io/
 baseurl: /mario-pappagallo
 
-highlighter: rouge
+collections:
+  - testi
