--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Mario Pappagallo
-url: http://annoys-parrot.github.io/
+url: http://annoys-parrot.github.io
 baseurl: /mario-pappagallo
 
 collections:
