--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,5 @@
 title: Mario Pappagallo
-url: http://annoys-parrot.github.io
-baseurl: /mario-pappagallo
+url: http://annoys-parrot.github.io/mario-pappagallo/
 
 collections:
   testi:
